feat(create book api): implement service layer for create book