@@ -1,16 +1,14 @@
 package org.aimodel.book.service;
 
+import java.util.List;
 import org.aimodel.book.controller.dto.BookDto;
 import org.aimodel.book.repository.entity.Book;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Component
 public class BookMapper {
 
-    private BookDto toDto(Book book) {
+    public BookDto toDto(Book book) {
         return new BookDto(
                 book.getId(),
                 book.getTitle(),
@@ -23,6 +21,15 @@ public class BookMapper {
     public List<BookDto> toDtoList(List<Book> books) {
         return books.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Book toEntity(BookDto bookDto) {
+        return  Book.builder()
+                .title(bookDto.getTitle())
+                .author(bookDto.getAuthor())
+                .publisher(bookDto.getPublisher())
+                .price(bookDto.getPrice())
+                .build();
     }
 }
